fixed spacing

--- a/src/styles/devlist.scss
+++ b/src/styles/devlist.scss
@@ -15,7 +15,7 @@ $platinum: #ecebea;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  padding: 30px;
+  padding: 30px 0px;
   background-color: $space;
   width: 100%;
   flex-wrap: wrap;
@@ -112,13 +112,19 @@ $platinum: #ecebea;
 
   //Capstone and Podcast buttons
   .dev-card__capstone {
-    width: 80%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    // width: 80%;
     align-self: center;
     text-align: center;
   }
 
   .dev-card__podcast {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     align-self: center;
-    text-align: center;
+    margin-bottom: 10px;
   }
 }
