--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -14,7 +14,7 @@ $platinum: #ecebea;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 20px 10px 20px 30px;
+  padding: 20px;
   background-color: $space !important;
   font-size: 1.5em;
   font-weight: 600;
